# routes/index.js
@@ -2,6 +2,8 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/swagger', require('./swagger'));
+router.use('/contacts', require('./bookRoutes'));
+router.use('/reviews', require('./reviewRoutes'));
 
 module.exports = router;
 router.get('/', (req, res) => {
